# Fagan-Lite-Tool

./: CMakeLists.txt  F_Tool.mk  F_Tool.project  F_Tool.txt  FileSearcher.cpp  FileSearcher.hpp  config.cfg  main.cpp  result.xml  template.txt  testfile.xml
Debug/: FileSearcher.cpp.o.d  doxydoc  main.cpp.o.d  results.xml  template.cpp  template.txt
Debug/docs/html/: annotated.html  classes.html  classhoi.html  index.html
Debug/test/: test.hpp  test2.hpp
Release/: main.cpp.o.d  template.txt
models/: ClassDiagram.simp
source/include/: BaseTest.hpp  CommandLineOptions.hpp  CommentStyle.hpp  DoxygenCheck.hpp  DoxygenTool.hpp  FaganInspectionTest.hpp  FileSearcher.hpp  HeaderCheck.hpp  InclusionGuards.hpp  IndentCheck.hpp  LineLength.hpp  OutputWriter.hpp  StreamRedirector.hpp  Test_Type.hpp  Xml.hpp  XmlFileFormat.hpp  XmlNode.cpp  XmlNode.hpp
source/src/: CommandLineOptions.cpp  CommentStyle.cpp  DoxygenCheck.cpp  DoxygenTool.cpp  FaganInspectionTest.cpp  FileSearcher.cpp  HeaderCheck.cpp  InclusionGuards.cpp  IndentCheck.cpp  LineLength.cpp  OutputWriter.cpp  StreamRedirector.cpp  Xml.cpp  XmlFileFormat.cpp  XmlNode.cpp  main.cpp
test/: FaganCommentTest.cpp  FaganDirTest.cpp  FaganDoxygenTest.cpp  FaganHeaderTest.cpp  FaganIndentTest.cpp  FaganLineLengthTest.cpp  FaganXmlTest.cpp  Main_TestAll.cpp
test/testfiles/: BaseTest.hpp  CommandLineOptions.cpp  CommandLineOptions.hpp  FaganInspectionTest.cpp  FaganInspectionTest.hpp  FileSearcher.cpp  FileSearcher.hpp  LineLength.cpp  XmlNode.cpp  XmlNode.cpptest  XmlNode.hpp  XmlNode.hpptest
(+4 files in other folders)
